// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skills renders correctly with a single category 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c13 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c0 {
  padding: 3rem 0;
}

.c8 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c10 {
  column-gap: 2rem;
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 3rem;
}

.c11 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c12 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199.99px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c10 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c10 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Skills & Tools
      </p>
      <p
        class="c3 c4 c6"
      >
        Skills
      </p>
      <h2
        class="c7 c8"
      >
        What I work with
      </h2>
      <p
        class="c9"
      >
        Technologies and practices
      </p>
      <div
        class="c10"
      >
        <div
          class=""
        >
          <h3
            class="c11"
          >
            Frontend
          </h3>
          <ul
            class="c12"
          >
            <li
              class="c13"
            >
              React
            </li>
            <li
              class="c13"
            >
              Next.js
            </li>
            <li
              class="c13"
            >
              TypeScript
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;

exports[`Skills renders correctly with all categories 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c3 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c13 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c4 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c2 {
  align-items: center;
  background: none;
  border: 0;
  color: var(--color-highlight);
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 0.875rem;
  font-weight: 600;
  margin: 0 0 1.5rem;
  min-height: 44px;
  padding: 0;
}

.c9 {
  color: var(--color-paragraph);
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: -0.75rem 0 1.5rem;
}

.c6 {
  display: none;
}

.c0 {
  padding: 3rem 0;
}

.c8 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c10 {
  column-gap: 2rem;
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 3rem;
}

.c11 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  margin: 0 0 1rem;
  text-transform: uppercase;
}

.c12 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 3.5rem;
  }
}

@media (min-width: 900px) {
  .c2 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c5 {
    display: none;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: block;
  }
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199.99px) {
  .c8 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c10 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c10 {
    grid-template-columns: repeat(3, 1fr);
  }
}

<div>
  <section
    class="c0"
    id="skills"
  >
    <section
      class="c1"
    >
      <button
        class="c2"
        type="button"
      >
        ← Explore
      </button>
      <p
        class="c3 c4 c5"
      >
        Skills & Tools
      </p>
      <p
        class="c3 c4 c6"
      >
        Skills
      </p>
      <h2
        class="c7 c8"
      >
        What I work with
      </h2>
      <p
        class="c9"
      >
        Technologies and practices
      </p>
      <div
        class="c10"
      >
        <div
          class=""
        >
          <h3
            class="c11"
          >
            Languages & Frameworks
          </h3>
          <ul
            class="c12"
          >
            <li
              class="c13"
            >
              React
            </li>
            <li
              class="c13"
            >
              Next.js
            </li>
            <li
              class="c13"
            >
              TypeScript
            </li>
            <li
              class="c13"
            >
              JavaScript
            </li>
            <li
              class="c13"
            >
              Redux
            </li>
            <li
              class="c13"
            >
              Vue.js
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c11"
          >
            Commerce & CMS
          </h3>
          <ul
            class="c12"
          >
            <li
              class="c13"
            >
              Shopify
            </li>
            <li
              class="c13"
            >
              BigCommerce
            </li>
            <li
              class="c13"
            >
              Prismic
            </li>
            <li
              class="c13"
            >
              Contentful
            </li>
            <li
              class="c13"
            >
              Algolia
            </li>
            <li
              class="c13"
            >
              headless WordPress
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c11"
          >
            Shopify App Stack
          </h3>
          <ul
            class="c12"
          >
            <li
              class="c13"
            >
              Remix
            </li>
            <li
              class="c13"
            >
              Prisma
            </li>
            <li
              class="c13"
            >
              Shopify Polaris
            </li>
            <li
              class="c13"
            >
              Liquid
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c11"
          >
            Tooling & Testing
          </h3>
          <ul
            class="c12"
          >
            <li
              class="c13"
            >
              Storybook
            </li>
            <li
              class="c13"
            >
              Chromatic
            </li>
            <li
              class="c13"
            >
              Jest
            </li>
            <li
              class="c13"
            >
              Sentry
            </li>
            <li
              class="c13"
            >
              Webpack
            </li>
            <li
              class="c13"
            >
              Node.js
            </li>
            <li
              class="c13"
            >
              Git
            </li>
          </ul>
        </div>
        <div
          class=""
        >
          <h3
            class="c11"
          >
            Practices
          </h3>
          <ul
            class="c12"
          >
            <li
              class="c13"
            >
              Frontend Architecture
            </li>
            <li
              class="c13"
            >
              Design Systems
            </li>
            <li
              class="c13"
            >
              Core Web Vitals
            </li>
            <li
              class="c13"
            >
              WCAG 2.1 AA
            </li>
            <li
              class="c13"
            >
              Tech Leadership
            </li>
          </ul>
        </div>
      </div>
    </section>
  </section>
</div>
`;
